// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input /> should highlight all text when focused and highlightOnFocus is true 1`] = `
<input
  className="input "
  id="test-input"
  name="test-input"
  onFocus={[Function]}
  type="text"
/>
`;

exports[`<Input /> should not highlight all text when focused and highlightOnFocus is false\` 1`] = `
<input
  className="input "
  id="test-input"
  name="test-input"
  onFocus={[Function]}
  type="text"
/>
`;

exports[`<Input /> should render an input 1`] = `
<input
  className="input "
  id="test-input"
  name="test-input"
  onFocus={[Function]}
  type="text"
/>
`;

exports[`<Input /> should render an input with a disable prefix text 1`] = `
<styled.div
  disabledPrefix="test"
  hasIcon={false}
>
  <styled.div>
    <styled.span>
       
      test
       
    </styled.span>
  </styled.div>
  <input
    className="input "
    id="test-input"
    name="test-input"
    onFocus={[Function]}
    type="text"
  />
</styled.div>
`;

exports[`<Input /> should render an input with an icon 1`] = `
<styled.div
  hasIcon={true}
>
  <styled.div>
    <Icon
      isSpinning={false}
      size="medium"
      type="fa-check"
    />
    <styled.span>
       
       
    </styled.span>
  </styled.div>
  <input
    className="input "
    id="test-input"
    name="test-input"
    onFocus={[Function]}
    type="text"
  />
</styled.div>
`;

exports[`<Input /> should render with an onBlur function if handleBlur is passed in 1`] = `
<input
  className="input "
  id="test-input"
  name="test-input"
  onBlur={[Function]}
  onFocus={[Function]}
  type="text"
/>
`;
